--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
-build/
-DerivedData/
+# build/
+# DerivedData/
 
 ## Various settings
 *.pbxuser
@@ -35,7 +35,7 @@ playground.xcworkspace
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
 # Packages/
-.build/
+# .build/
 
 # CocoaPods
 #
