--- a/Meily-Server.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
+++ b/Meily-Server.xcodeproj/xcshareddata/xcschemes/xcschememanagement.plist
@@ -3,7 +3,7 @@
 <dict>
   <key>SchemeUserState</key>
   <dict>
-    <key>Kitura-Maily.xcscheme</key>
+    <key>Meily-Server-Package.xcscheme</key>
     <dict></dict>
   </dict>
   <key>SuppressBuildableAutocreation</key>
